# ShopAPI

./: .gitignore  alembic.ini  main.py  pyproject.toml
src/: main.py
src/backend/: db.py
src/migrations/: env.py
src/migrations/versions/: 7103ba1b2604_initial_migration.py
src/models/: category.py  products.py
src/routers/: category.py
src/schemas/: schemas.py
