[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Maniakalochka <maniakalochka@gmail.com.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
