[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Maniakalochka <maniakalochka@gmail.com.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
slugify = "^0.0.1"
unicode = "^2.9"
python-slugify = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
